packages/core/src/__generated__/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { KDT: peg$parseKDT, Command: peg$parseCommand, Definition: peg$parseDefinition, ScaleToken: peg$parseScaleToken, SemanticToken: peg$parseSemanticToken, Token: peg$parseToken, Macro: peg$parseMacro },
      peg$startRuleFunction  = peg$parseKDT,

      peg$c0 = "\n",
      peg$c1 = peg$literalExpectation("\n", false),
      peg$c2 = function(commands) {
          return commands;
        },
      peg$c3 = ":",
      peg$c4 = peg$literalExpectation(":", false),
      peg$c5 = function(extension, name, params) {
        	return { kind: "Macro", extension, name, params };
        },
      peg$c6 = ",",
      peg$c7 = peg$literalExpectation(",", false),
      peg$c8 = function(head, tail) {
        	return [head, ...tail.map(el => el[3])];
        },
      peg$c9 = "*",
      peg$c10 = peg$literalExpectation("*", false),
      peg$c11 = function(token, op, binding, condition) {
          return { kind: "SemanticTokenDefinition", token, binding, condition };
        },
      peg$c12 = function(token, property, binding, condition) {
          return { kind: "SemanticTokenDefinition", token, binding, property, condition };
        },
      peg$c13 = function(token, op, binding, condition) {
          return { kind: "ColorScaleTokenDefinition", token, binding, condition };
        },
      peg$c14 = function(token, op, binding, condition) {
          return { kind: "OpacityScaleTokenDefinition", token, binding, condition };
        },
      peg$c15 = function(token, op, binding, condition) {
          return { kind: "FontSizeScaleTokenDefinition", token, binding, condition };
        },
      peg$c16 = function(token, op, binding, condition) {
          return { kind: "FontWeightScaleTokenDefinition", token, binding, condition };
        },
      peg$c17 = function(token, op, binding, condition) {
          return { kind: "LineHeightScaleTokenDefinition", token, binding, condition };
        },
      peg$c18 = function(token, op, binding, condition) {
          return { kind: "LetterSpacingScaleTokenDefinition", token, binding, condition };
        },
      peg$c19 = function(token, op, binding, condition) {
          return { kind: "DurationScaleTokenDefinition", token, binding, condition };
        },
      peg$c20 = function(token, op, binding, condition) {
          return { kind: "TimingFunctionScaleTokenDefinition", token, binding, condition };
        },
      peg$c21 = function(token, op, comment) {
          return { kind: "CommentDefinition", token, comment }
        },
      peg$c22 = function(prefix, group, name) {
          return { kind: "SemanticToken", prefix, group, name };
        },
      peg$c23 = "color",
      peg$c24 = peg$literalExpectation("color", false),
      peg$c25 = function(prefix, target, name) {
          return { kind: "ColorScaleToken", prefix, target, name };
        },
      peg$c26 = "opacity",
      peg$c27 = peg$literalExpectation("opacity", false),
      peg$c28 = function(prefix, target, name) {
          return { kind: "OpacityScaleToken", prefix, target, name };
        },
      peg$c29 = "font-size",
      peg$c30 = peg$literalExpectation("font-size", false),
      peg$c31 = function(prefix, target, name) {
          return { kind: "FontSizeScaleToken", prefix, target, name };
        },
      peg$c32 = "font-weight",
      peg$c33 = peg$literalExpectation("font-weight", false),
      peg$c34 = function(prefix, target, name) {
          return { kind: "FontWeightScaleToken", prefix, target, name };
        },
      peg$c35 = "line-height",
      peg$c36 = peg$literalExpectation("line-height", false),
      peg$c37 = function(prefix, target, name) {
          return { kind: "LineHeightScaleToken", prefix, target, name };
        },
      peg$c38 = "letter-spacing",
      peg$c39 = peg$literalExpectation("letter-spacing", false),
      peg$c40 = function(prefix, target, name) {
          return { kind: "LetterSpacingScaleToken", prefix, target, name };
        },
      peg$c41 = "duration",
      peg$c42 = peg$literalExpectation("duration", false),
      peg$c43 = function(prefix, target, name) {
          return { kind: "DurationScaleToken", prefix, target, name };
        },
      peg$c44 = "timing-function",
      peg$c45 = peg$literalExpectation("timing-function", false),
      peg$c46 = function(prefix, target, name) {
          return { kind: "TimingFunctionScaleToken", prefix, target, name };
        },
      peg$c47 = function(condition) {
          return condition;
        },
      peg$c48 = /^[a-z]/,
      peg$c49 = peg$classExpectation([["a", "z"]], false, false),
      peg$c50 = /^[a-z0-9]/,
      peg$c51 = peg$classExpectation([["a", "z"], ["0", "9"]], false, false),
      peg$c52 = "-",
      peg$c53 = peg$literalExpectation("-", false),
      peg$c54 = function() {
          return text();
        },
      peg$c55 = /^[a-zA-Z]/,
      peg$c56 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c57 = /^[a-zA-Z0-9]/,
      peg$c58 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
      peg$c59 = "$component",
      peg$c60 = peg$literalExpectation("$component", false),
      peg$c61 = "$semantic",
      peg$c62 = peg$literalExpectation("$semantic", false),
      peg$c63 = "$scale",
      peg$c64 = peg$literalExpectation("$scale", false),
      peg$c65 = "$static",
      peg$c66 = peg$literalExpectation("$static", false),
      peg$c67 = "%",
      peg$c68 = peg$literalExpectation("%", false),
      peg$c69 = "->",
      peg$c70 = peg$literalExpectation("->", false),
      peg$c71 = "-[:",
      peg$c72 = peg$literalExpectation("-[:", false),
      peg$c73 = "]>",
      peg$c74 = peg$literalExpectation("]>", false),
      peg$c75 = function(property) {
          return property;
        },
      peg$c76 = "#>",
      peg$c77 = peg$literalExpectation("#>", false),
      peg$c78 = peg$otherExpectation("hex"),
      peg$c79 = "#",
      peg$c80 = peg$literalExpectation("#", false),
      peg$c81 = function(code) {
          switch (code.length) {
            case 3:
            case 4:
            case 6:
            case 8:
              return { kind: 'ColorHexLit', value: text() };
          }
          error('Invalid color code: ' + text());
        },
      peg$c82 = peg$otherExpectation("rgb()"),
      peg$c83 = "rgb",
      peg$c84 = peg$literalExpectation("rgb", false),
      peg$c85 = function(r, g, b) {
          if (r < 0 || r > 255) error('Invalid value must be 0 ~ 255, but got ' + r);
          if (g < 0 || g > 255) error('Invalid value must be 0 ~ 255, but got ' + g);
          if (b < 0 || b > 255) error('Invalid value must be 0 ~ 255, but got ' + b);
          return { kind: 'ColorRgbLit', r, g, b };
        },
      peg$c86 = peg$otherExpectation("rgba()"),
      peg$c87 = "rgba",
      peg$c88 = peg$literalExpectation("rgba", false),
      peg$c89 = function(r, g, b, a) {
          if (r < 0 || r > 255) error('Invalid color code: value must be 0 ~ 255, but got ' + r);
          if (g < 0 || g > 255) error('Invalid color code: value must be 0 ~ 255, but got ' + g);
          if (b < 0 || b > 255) error('Invalid color code: value must be 0 ~ 255, but got ' + b);
          if (a < 0 || a > 1) error('Invalid color code: alpha must be 0.0 ~ 1.0, but got ' + a.toFixed(1));
          return { kind: 'ColorRgbaLit', r, g, b, a };
        },
      peg$c90 = "thin",
      peg$c91 = peg$literalExpectation("thin", false),
      peg$c92 = "regular",
      peg$c93 = peg$literalExpectation("regular", false),
      peg$c94 = "bold",
      peg$c95 = peg$literalExpectation("bold", false),
      peg$c96 = function(value) {
          return { kind: 'FontWeightLit', value }
        },
      peg$c97 = peg$otherExpectation("point"),
      peg$c98 = "pt",
      peg$c99 = peg$literalExpectation("pt", false),
      peg$c100 = function(value) {
          return { kind: 'PointLit', value };
        },
      peg$c101 = peg$otherExpectation("percent"),
      peg$c102 = function(value) {
          return { kind: 'PercentLit', value };
        },
      peg$c103 = "ms",
      peg$c104 = peg$literalExpectation("ms", false),
      peg$c105 = function(value) {
          return { kind: 'MillisecondLit', value };
        },
      peg$c106 = peg$otherExpectation("cubic-bezier()"),
      peg$c107 = "cubic-bezier",
      peg$c108 = peg$literalExpectation("cubic-bezier", false),
      peg$c109 = function(p0, p1, p2, p3) {
          if (p0 < 0 || p0 > 1) error('Invalid p0: value must be 0 ~ 1, but got ' + p0);
          if (p2 < 0 || p2 > 1) error('Invalid p2: value must be 0 ~ 1, but got ' + p2);
          return { kind: 'CubicBezierLit', p0, p1, p2, p3 }
        },
      peg$c110 = peg$otherExpectation("quoted string"),
      peg$c111 = "\"",
      peg$c112 = peg$literalExpectation("\"", false),
      peg$c113 = /^[^\n\r\f"]/,
      peg$c114 = peg$classExpectation(["\n", "\r", "\f", "\""], true, false),
      peg$c115 = function(chars) {
        	return chars.join('');
        },
      peg$c116 = "'",
      peg$c117 = peg$literalExpectation("'", false),
      peg$c118 = /^[^\n\r\f']/,
      peg$c119 = peg$classExpectation(["\n", "\r", "\f", "'"], true, false),
      peg$c120 = peg$otherExpectation("function opening ("),
      peg$c121 = "(",
      peg$c122 = peg$literalExpectation("(", false),
      peg$c123 = peg$otherExpectation("function closing )"),
      peg$c124 = ")",
      peg$c125 = peg$literalExpectation(")", false),
      peg$c126 = peg$otherExpectation("hexadecimal"),
      peg$c127 = /^[0-9a-fA-F]/,
      peg$c128 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c129 = peg$otherExpectation("number"),
      peg$c130 = ".",
      peg$c131 = peg$literalExpectation(".", false),
      peg$c132 = /^[0-9]/,
      peg$c133 = peg$classExpectation([["0", "9"]], false, false),
      peg$c134 = "e",
      peg$c135 = peg$literalExpectation("e", false),
      peg$c136 = "E",
      peg$c137 = peg$literalExpectation("E", false),
      peg$c138 = "+",
      peg$c139 = peg$literalExpectation("+", false),
      peg$c140 = function() {
          return parseFloat(text());
        },
      peg$c141 = peg$otherExpectation("integer"),
      peg$c142 = "0",
      peg$c143 = peg$literalExpectation("0", false),
      peg$c144 = /^[1-9]/,
      peg$c145 = peg$classExpectation([["1", "9"]], false, false),
      peg$c146 = function() {
          return parseInt(text())
        },
      peg$c147 = peg$otherExpectation("comma"),
      peg$c148 = peg$otherExpectation("end of line"),
      peg$c149 = ";",
      peg$c150 = peg$literalExpectation(";", false),
      peg$c151 = peg$otherExpectation("end of file"),
      peg$c152 = peg$otherExpectation("space"),
      peg$c153 = " ",
      peg$c154 = peg$literalExpectation(" ", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseKDT() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = [];
    if (input.charCodeAt(peg$currPos) === 10) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      if (input.charCodeAt(peg$currPos) === 10) {
        s2 = peg$c0;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseCommand();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseCommand();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseEOF();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseCommand() {
    var s0;

    s0 = peg$parseDefinition();
    if (s0 === peg$FAILED) {
      s0 = peg$parseMacro();
    }

    return s0;
  }

  function peg$parseMacro() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseMacroPrefix();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseExtensionName();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseTokenName();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseFUNC_OPEN();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseMacroParams();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseFUNC_CLOSE();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseEOL();
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c5(s2, s4, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMacroParams() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseMacroParam();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c6;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseMacroParam();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s5 = peg$c6;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c7); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseMacroParam();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMacroParam() {
    var s0;

    s0 = peg$parseToken();
    if (s0 === peg$FAILED) {
      s0 = peg$parseTokenName();
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 42) {
          s0 = peg$c9;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parseStringLit();
        }
      }
    }

    return s0;
  }

  function peg$parseDefinition() {
    var s0;

    s0 = peg$parseScaleTokenDefinition();
    if (s0 === peg$FAILED) {
      s0 = peg$parseAliasTokenDefinition();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCompositeTokenDefinition();
        if (s0 === peg$FAILED) {
          s0 = peg$parseCommentDefinition();
        }
      }
    }

    return s0;
  }

  function peg$parseAliasTokenDefinition() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
